data/issues_nolabel/nolabel_test_15170.txt
Go: Don't require -std=c99 for the cgo code.

This should fix the error:
github.com/tensorflow/tensorflow/tensorflow/go/graph.go:31:3: error:
'for' loop initial declarations are only allowed in C99 mode
//  for (int i = 0; i < num_shapes; i++) {
^
in some continuous builds like:
https://ci.tensorflow.org/job/tensorflow-master-cpu/3297/consoleFull
Alternative to #15169